<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NewApi">

    <LinearLayout
        android:id="@+id/ll_width_layout_image"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/width"
            android:textSize="16sp"
            android:textColor="@color/onyx"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_width_layout_image"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/onyx"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_height_layout_image"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/height"
            android:textSize="16sp"
            android:textColor="@color/onyx"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_height_layout_image"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/onyx"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_margin_layout_image"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/margin"
            android:textSize="16sp"
            android:textColor="@color/onyx"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_margin_layout_image"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/onyx"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_padding_layout_image"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/padding"
            android:textSize="16sp"
            android:textColor="@color/onyx"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_padding_layout_image"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/onyx"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_scale_type_layout_image"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/scale_type"
            android:textSize="16sp"
            android:textColor="@color/onyx"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_scale_type_layout_image"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/onyx"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_shape_layout_image"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/shape"
            android:textSize="16sp"
            android:textColor="@color/onyx"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_shape_layout_image"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/onyx"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>